--- a/Test.nb.html
+++ b/Test.nb.html
@@ -240,9 +240,10 @@ summary {
 <p>This is a git test</p>
 <p>This is a test of the commit function.</p>
 <p>commit 1</p>
+<p>Commit 2</p>
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tCnRpdGxlOiAiUiBUZXN0IgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKVGhpcyBpcyBhIGdpdCB0ZXN0CgpUaGlzIGlzIGEgdGVzdCBvZiB0aGUgY29tbWl0IGZ1bmN0aW9uLgoKY29tbWl0IDE=</div>
+<div id="rmd-source-code">LS0tCnRpdGxlOiAiUiBUZXN0IgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKVGhpcyBpcyBhIGdpdCB0ZXN0CgpUaGlzIGlzIGEgdGVzdCBvZiB0aGUgY29tbWl0IGZ1bmN0aW9uLgoKY29tbWl0IDEKCkNvbW1pdCAy</div>
 
 
 
