--- a/Test.nb.html
+++ b/Test.nb.html
@@ -241,9 +241,10 @@ summary {
 <p>This is a test of the commit function.</p>
 <p>commit 1</p>
 <p>Commit 2</p>
+<p>commit 3</p>
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tCnRpdGxlOiAiUiBUZXN0IgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKVGhpcyBpcyBhIGdpdCB0ZXN0CgpUaGlzIGlzIGEgdGVzdCBvZiB0aGUgY29tbWl0IGZ1bmN0aW9uLgoKY29tbWl0IDEKCkNvbW1pdCAy</div>
+<div id="rmd-source-code">LS0tCnRpdGxlOiAiUiBUZXN0IgpvdXRwdXQ6IGh0bWxfbm90ZWJvb2sKLS0tCgoKVGhpcyBpcyBhIGdpdCB0ZXN0CgpUaGlzIGlzIGEgdGVzdCBvZiB0aGUgY29tbWl0IGZ1bmN0aW9uLgoKY29tbWl0IDEKCkNvbW1pdCAyCgpjb21taXQgMw==</div>
 
 
 
